--- a/Contest-1/readme.rm
+++ b/Contest-1/readme.rm
@@ -2,3 +2,6 @@ Bu testteki bütün sorular 100 puandır.
 Test süresi 90 dakikadır.
 Başlangıç: 16.00
 Bitiş: 17.30
+
+
+Cevapları bir Drive zip dosyayına koy, paylaş ve linki Google Forms'a gönder: https://forms.gle/qDqCR5BDCWYanWkm7
