--- a/Contest-1/readme.rm
+++ b/Contest-1/readme.rm
@@ -3,5 +3,5 @@ Test süresi 90 dakikadır.
 Başlangıç: 16.00
 Bitiş: 17.30
 
-
-Cevapları bir Drive zip dosyayına koy, paylaş ve linki Google Forms'a gönder: https://forms.gle/qDqCR5BDCWYanWkm7
+Cevapları A.cpp,B.cpp,vs. olarak adlandırıp bir zip dosyasına sıkıştır.
+Dosyayı Drive'a gönder ve linki Google Forms'a gönder: https://forms.gle/qDqCR5BDCWYanWkm7
